# color-sorted-pick-place-ros

./: .gitignore  CMakeLists.txt  README.md  package.xml  setup.py
launch/: panda_world.launch
models/bin_blue/: model.config
models/bin_green/: model.config
models/bin_red/: model.config
models/kinect/: model.config
models/underbin_bench/: model.config
models/workbench/: model.config
msg/: DetectedObject.msg  DetectedObjectsStamped.msg
scripts/: controller.py  object_detector.py  pick_and_place_state_machine.py
