<?xml version="1.0"?>
<package format="2">
  <name>pick_and_place</name>
  <version>1.0.0</version>
  <description>
    Color-sorted pick-and-place in ROS and Gazebo using perception-driven object detection and a state-machine-based manipulation pipeline.
  </description>

  <maintainer email="aymisxx@proton.me">Ayushman Mishra</maintainer>
  <license>MIT</license>
  <author email="aymisxx@proton.me">Ayushman Mishra</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>

  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>message_runtime</exec_depend>

  <export>
    <!-- Gazebo paths for local models and plugins -->
    <gazebo_ros gazebo_plugin_path="${prefix}/lib"
                gazebo_model_path="${prefix}/.." />
  </export>
</package>